--- a/Remage/Storyboards/Base.lproj/Main.storyboard
+++ b/Remage/Storyboards/Base.lproj/Main.storyboard
@@ -1,8 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VAv-3m-RwU">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Storyboard Reference-->
+        <scene sceneID="npp-4K-zr2">
+            <objects>
+                <viewControllerPlaceholder id="fRW-Ns-Q6A" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="cxS-vc-VeG"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pok-Hz-EUg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-515" y="420"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="fUz-pc-YWK">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3bL-gK-sZR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tabBarController id="VAv-3m-RwU" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OGa-fJ-mqX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="o2W-kg-bJd" kind="relationship" relationship="viewControllers" id="2tf-Yw-Ykm"/>
+                        <segue destination="fRW-Ns-Q6A" kind="relationship" relationship="viewControllers" id="bZ1-rl-66v"/>
+                        <segue destination="J8u-QT-NtW" kind="relationship" relationship="viewControllers" id="epU-Bx-lEl"/>
+                        <segue destination="fcO-OT-Rl3" kind="relationship" relationship="viewControllers" id="GKt-98-Pw8"/>
+                    </connections>
+                </tabBarController>
+            </objects>
+            <point key="canvasLocation" x="-284" y="-27"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="MqU-3m-zJl">
+            <objects>
+                <viewControllerPlaceholder id="J8u-QT-NtW" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Qh8-xO-pFK"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fgt-q9-2Yw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-102" y="420"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="Wb0-EB-sUj">
+            <objects>
+                <viewControllerPlaceholder id="o2W-kg-bJd" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="ZFJ-Mo-CSk"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fdw-9C-uDr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-912" y="420"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="a6a-WP-OFh">
+            <objects>
+                <viewControllerPlaceholder id="fcO-OT-Rl3" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="taC-0Q-659"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J72-aW-6V6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="315" y="420"/>
+        </scene>
+    </scenes>
 </document>
