--- a/Remage/Storyboards/Reminders.storyboard
+++ b/Remage/Storyboards/Reminders.storyboard
@@ -1,62 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Z9D-iZ-kib">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2z4-8i-uoD">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="e2y-fZ-tOW">
+        <!--Collection View Controller-->
+        <scene sceneID="21T-gG-BiC">
             <objects>
-                <viewController id="fkh-Bi-iqK" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="yRl-x3-glc">
+                <collectionViewController id="Vpt-XF-KGq" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="XpS-o0-dK7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reminders" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zvi-Sj-2IP">
-                                <rect key="frame" x="93" y="418" width="228" height="60"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="zvi-Sj-2IP" firstAttribute="centerY" secondItem="yRl-x3-glc" secondAttribute="centerY" id="P0Q-Is-Xyq"/>
-                            <constraint firstItem="zvi-Sj-2IP" firstAttribute="centerX" secondItem="yRl-x3-glc" secondAttribute="centerX" id="yOY-wm-77y"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="GGP-ry-laA"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="w1m-Fx-vcm"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="w2n-7N-Zwm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8dW-YD-sSJ">
+                            <size key="itemSize" width="128" height="128"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="5k6-GG-8ex">
+                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xXn-1e-xVq">
+                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </collectionViewCellContentView>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="Vpt-XF-KGq" id="WzT-Wb-5b0"/>
+                            <outlet property="delegate" destination="Vpt-XF-KGq" id="bT8-xJ-9Qm"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="nRG-Zg-tGi"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OQU-Li-Ybn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1079.7101449275362" y="92.410714285714278"/>
+            <point key="canvasLocation" x="2018.840579710145" y="91.741071428571431"/>
         </scene>
         <!--Reminders-->
-        <scene sceneID="Wdh-Mv-UhQ">
+        <scene sceneID="ekb-at-ke8">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Z9D-iZ-kib" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Reminders" image="square.grid.3x2.fill" catalog="system" id="ljB-pU-FKI"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2z4-8i-uoD" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Reminders" image="rectangle.3.offgrid" catalog="system" id="0Fq-Zm-Idr"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eVs-H2-KdD">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TNE-DQ-Qe6">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="fkh-Bi-iqK" kind="relationship" relationship="rootViewController" id="aWh-Hn-0d4"/>
+                        <segue destination="Vpt-XF-KGq" kind="relationship" relationship="rootViewController" id="kpJ-Rx-uiy"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gLu-Ho-WJ2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0pZ-Xz-mzh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="169.56521739130437" y="92.410714285714278"/>
+            <point key="canvasLocation" x="1108.6956521739132" y="91.741071428571431"/>
         </scene>
     </scenes>
     <resources>
-        <image name="square.grid.3x2.fill" catalog="system" width="128" height="80"/>
+        <image name="rectangle.3.offgrid" catalog="system" width="128" height="80"/>
     </resources>
 </document>
