--- a/Remage/Storyboards/Reminders.storyboard
+++ b/Remage/Storyboards/Reminders.storyboard
@@ -26,12 +26,52 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="testCell" id="e5s-5r-Km8">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="reminderCell" id="e5s-5r-Km8">
+                                        <rect key="frame" x="0.0" y="0.0" width="110" height="145"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="jAV-s3-pos" customClass="ReminderCollectionViewCell" customModule="Remage" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="110" height="145"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BCR-0w-R9C">
+                                                    <rect key="frame" x="0.0" y="0.0" width="110" height="145"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WAf-b4-PpO">
+                                                            <rect key="frame" x="0.0" y="0.0" width="110" height="145"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vn6-Gw-s3g">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                                                                    <color key="backgroundColor" red="1" green="0.3411764706" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" secondItem="vn6-Gw-s3g" secondAttribute="height" multiplier="1:1" id="7Ss-xK-HE9"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xuD-lP-pNR">
+                                                                    <rect key="frame" x="0.0" y="120" width="110" height="25"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="WAf-b4-PpO" firstAttribute="top" secondItem="BCR-0w-R9C" secondAttribute="top" id="5Ij-ju-3od"/>
+                                                        <constraint firstAttribute="width" constant="110" id="BQ0-YW-aR1"/>
+                                                        <constraint firstAttribute="trailing" secondItem="WAf-b4-PpO" secondAttribute="trailing" id="Epx-Vr-k24"/>
+                                                        <constraint firstAttribute="height" constant="145" id="LFL-Sk-PFc"/>
+                                                        <constraint firstAttribute="bottom" secondItem="WAf-b4-PpO" secondAttribute="bottom" id="Zgs-N4-EzU"/>
+                                                        <constraint firstItem="WAf-b4-PpO" firstAttribute="leading" secondItem="BCR-0w-R9C" secondAttribute="leading" id="stt-J1-849"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="BCR-0w-R9C" secondAttribute="bottom" id="NzQ-hM-2QO"/>
+                                                <constraint firstItem="BCR-0w-R9C" firstAttribute="top" secondItem="jAV-s3-pos" secondAttribute="top" id="cLr-sq-UnU"/>
+                                                <constraint firstAttribute="trailing" secondItem="BCR-0w-R9C" secondAttribute="trailing" id="mHa-Ui-tjL"/>
+                                                <constraint firstItem="BCR-0w-R9C" firstAttribute="leading" secondItem="jAV-s3-pos" secondAttribute="leading" id="mIW-Rm-0iv"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                     </collectionViewCell>
                                 </cells>
